<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_check"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/back_btn" />

    <TextView
        android:id="@+id/title_summarize_comment_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/summarize_doctor_comment"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <EditText
        android:id="@+id/summarize_doctor_comment_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/doctor_comment_edit_background"
        android:gravity="center_vertical"
        android:hint="@string/hint_report"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/title_summarize_comment_text" />

    <TextView
        android:id="@+id/title_ways_take_medicine_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/ways_take_medicine"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/summarize_doctor_comment_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/summarize_doctor_comment_edit_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/times_day_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/purple_btn_box"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="@id/title_ways_take_medicine_text"
        app:layout_constraintTop_toBottomOf="@id/title_ways_take_medicine_text">

        <TextView
            android:id="@+id/everyday_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/everyday"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/times_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:background="@drawable/light_purple_btn_box"
            android:gravity="center_vertical"
            android:hint="@string/_0"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/everyday_text_view"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginStart="10dp" />

        <TextView
            android:id="@+id/times_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:gravity="center_vertical"
            android:text="@string/times"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/times_edit_text"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/select_time_take_medicine_meal_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/title_ways_take_medicine_text"
        app:layout_constraintTop_toBottomOf="@+id/times_day_layout">

        <RadioButton
            android:id="@+id/select_meal_before_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/meal_before"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_meal_after_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="false"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/meal_after"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/select_time_take_medicine_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/select_time_take_medicine_meal_radio_group"
        app:layout_constraintTop_toBottomOf="@+id/select_time_take_medicine_meal_radio_group">

        <RadioButton
            android:id="@+id/select_time_now_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="false"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/now"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_time_30min_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="false"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/min_30"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_time_hour_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/hour"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

    </RadioGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/select_meals_take_medicine_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@id/title_ways_take_medicine_text"
        app:layout_constraintTop_toBottomOf="@+id/select_time_take_medicine_radio_group">

        <RadioButton
            android:id="@+id/select_Breakfast_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/morning"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_lunch_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/lunch"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_dinner_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="true"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/dinner"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/select_before_sleep_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_radio_btn"
            android:button="@null"
            android:checked="false"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/before_sleep"
            android:textAlignment="center"
            android:textColor="@drawable/selector_radio_text"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/next_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/complete_write_report"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>