<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id ="@+id/title_prefer_time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_work_time"
        android:textSize="18sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="32sp"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        app:layout_constraintLeft_toLeftOf="parent" />

    <RadioGroup
        android:id="@+id/days_of_week_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_prefer_time_text_view">

        <RadioButton
            android:id="@+id/monday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"
            android:text="@string/monday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/tuesday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"

            android:text="@string/tuesday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/wednesday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"
            android:text="@string/wednesday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/thrusday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"
            android:text="@string/thrusday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/friday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"

            android:text="@string/friday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/saturday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"
            android:text="@string/saturday"
            android:textAlignment="center"
            android:textSize="15sp" />
        <RadioButton
            android:id="@+id/sunday_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/before_select_day_of_week"
            android:button="@null"
            android:checked="true"
            android:text="@string/sunday"
            android:textAlignment="center"
            android:textSize="15sp" />

    </RadioGroup>

    <TextView
        android:id ="@+id/select_active_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_active_time"
        android:textSize="15sp"
        android:layout_marginTop="20sp"
        android:layout_marginStart="32sp"
        app:layout_constraintTop_toBottomOf="@+id/days_of_week_radio_group"
        app:layout_constraintLeft_toLeftOf="parent"
        />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/input_active_time_layout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/select_active_time_text"
        app:layout_constraintTop_toBottomOf="@+id/select_active_time_text">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue">

            <AutoCompleteTextView
                android:id="@+id/administrative_district_auto_complete_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:paddingStart="20dp"
                android:text="@string/_08_00" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="부터"
            android:textSize="20sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/input_city_layout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/input_active_time_layout"
        app:layout_constraintTop_toBottomOf="@+id/input_active_time_layout">

         <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="6"
          app:boxBackgroundColor="@color/white"
          app:boxStrokeColor="@color/blue">

             <AutoCompleteTextView
            android:id="@+id/city_auto_complete_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:paddingStart="20dp"
            android:text="@string/_20_00" />
         </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="까지"
            android:textSize="20sp"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/previous_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/blue_outline_box"
            android:gravity="center"
            android:text="@string/previous"
            android:textColor="@color/blue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/blue"
            android:gravity="center"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>